# pocketbase-nil-adapter

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-manifest.json
.github/: CODEOWNERS
.github/workflows/: conformance.yml
conformance/: test_conformance.py
src/pocketbase_nil_adapter/: __init__.py  compensation.py  edge.py  manifest.py  models.py  run.py  state.py  system.py  translate.py
