[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketbase-nil-adapter"
version = "0.1.0"
description = "A NIL translation shim for pocketbase, scaffolded by nilscript."
requires-python = ">=3.12"
dependencies = ["fastapi", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]
